@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk): 
 ---------------------------- 
 
+- Updated PHP/MapScript for MS RFC 69: clustering. (#3700)
+
 - Move allocation of cgiRequestObj paramNames/Values to msAllocCgiObj() (#1888)
 
 - Add support for simple aggregates for the cluster layer attributes (#3700)
